Authentication added but not working

--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -31,6 +31,7 @@
   <script src="app/app.js"></script>
   <script src="app/Login/Login.js"></script>
   <script src="app/Register/Register.js"></script>
+  <script src="app/Authentication/authentication.js"></script>
   <script src="app/components/version/version.js"></script>
   <script src="app/components/version/version-directive.js"></script>
   <script src="app/components/version/interpolate-filter.js"></script>
