--- a/Issue Tracking System/app/Register/Register.html
+++ b/Issue Tracking System/app/Register/Register.html
@@ -4,5 +4,8 @@
     <label for="password">Password</label>
     <input type="password" id="password"  ng-model='user.password' class="form-control">
     </br>
+    <label for="confirmPassword">Confirm Password</label>
+    <input type="password" id="confirmPassword"  ng-model='user.confirmPassword' class="form-control">
+    </br>
     <button ng-click='Register(user)' class="btn btn-default">Register</button>
 </form>
