--- a/Issue Tracking System/app/Login/Login.html
+++ b/Issue Tracking System/app/Login/Login.html
@@ -1,6 +1,6 @@
 <form name="LoginForm" >
-    <label for="username">Username</label>
-    <input type="text" id="username" ng-model='user.name' class="form-control">
+    <label for="email">Email</label>
+    <input type="text" id="email" ng-model='user.email' class="form-control">
     <label for="password">Password</label>
     <input type="password" id="password"  ng-model='user.password' class="form-control">
     </br>
