--- a/Issue Tracking System/app/Register/Register.html
+++ b/Issue Tracking System/app/Register/Register.html
@@ -1,11 +1,28 @@
 <form name="RegisterForm" >
-    <label for="username">Username</label>
-    <input type="text" id="username" ng-model='user.name' class="form-control">
+    <label for="email">Email</label>
+    <input type="text" id="email" ng-model='user.email' class="form-control">
     <label for="password">Password</label>
     <input type="password" id="password"  ng-model='user.password' class="form-control">
-    </br>
     <label for="confirmPassword">Confirm Password</label>
     <input type="password" id="confirmPassword"  ng-model='user.confirmPassword' class="form-control">
     </br>
     <button ng-click='Register(user)' class="btn btn-default">Register</button>
 </form>
+
+<div class="modal" ng-show="success">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <p>One fine body…</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
