--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -62,5 +62,6 @@
 <script src="app/Register/Register.js"></script>
 <script src="app/Authentication/authentication.js"></script>
 <script src="app/Messages/success.js"></script>
+<script src="app/Dashboard/Dashboard.js"></script>
 </body>
 </html>
