Projects module added

--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -43,10 +43,6 @@
         </div>
     </div>
 </nav>
-<!-- <ul class="menu">
-    <li><a href="#/login">Login</a></li>
-    <li><a href="#/register">Register</a></li>
-</ul>-->
 
 <div ng-view></div>
 
@@ -63,5 +59,6 @@
 <script src="app/Authentication/authentication.js"></script>
 <script src="app/Messages/success.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
+<script src="app/Project/Projects.js"></script>
 </body>
 </html>
