message working authentication fixed

--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -20,7 +20,7 @@
     <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-<div success></div>
+<div success ng-show="isSuccess"></div>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -54,8 +54,8 @@
 <script src="app/bower_components/angular/angular.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
 <script src="app/app.js"></script>
-<script src="app/Login/Login.js"></script>
-<script src="app/Register/Register.js"></script>
+<script src="app/Home/Login/Login.js"></script>
+<script src="app/Home/Register/Register.js"></script>
 <script src="app/Authentication/authentication.js"></script>
 <script src="app/Messages/success.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
