--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -34,9 +34,10 @@
             <a class="navbar-brand" href="#">Issue Tracking System</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#/login">Login <span class="sr-only">(current)</span></a></li>
+            <ul class="nav navbar-nav" id="nav">
+                <li class="active"><a href="#/login" >Login <span class="sr-only">(current)</span></a></li>
                 <li><a href="#/register">Register</a></li>
+                <li><a href="#/logout" ng-controller="LogoutCtrl" ng-click="Logout()">Logout</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -60,5 +61,6 @@
 <script src="app/Messages/success.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
 <script src="app/Project/Projects.js"></script>
+<script src="app/Home/Logout/Logout.js"></script>
 </body>
 </html>
