--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href='app/bower_components/bootstrap/dist/css/bootstrap.css'>
+    <link rel="stylesheet" href="app/bower_components/toastr/toastr.css" />
     <link rel="stylesheet" href="app/app.css">
     <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -50,10 +51,12 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
+
 <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="app/bower_components/angular/angular.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
+<script src="app/bower_components/toastr/toastr.js"></script>
 <script src="app/app.js"></script>
 <script src="app/Home/Login/Login.js"></script>
 <script src="app/Home/Register/Register.js"></script>
