--- a/Issue Tracking System/app/Home/home.html
+++ b/Issue Tracking System/app/Home/home.html
@@ -2,9 +2,9 @@
     <div class="col-md-3 col-md-offset-1">
         <form name="LoginForm">
             <label for="email">Email</label>
-            <input type="text" id="email" ng-model='user.email' class="form-control">
+            <input type="text" id="email" ng-model='user.email' class="form-control" required>
             <label for="password">Password</label>
-            <input type="password" id="password" ng-model='user.password' class="form-control">
+            <input type="password" id="password" ng-model='user.password' class="form-control" required>
             </br>
             <button ng-click='Login(user)' class="btn btn-default">Login</button>
         </form>
@@ -12,11 +12,11 @@
     <div class="col-md-3 col-md-offset-2">
         <form name="RegisterForm">
             <label for="reg-email">Email</label>
-            <input type="text" id="reg-email" ng-model='user.email' class="form-control">
+            <input type="text" id="reg-email" ng-model='user.email' class="form-control" required>
             <label for="reg-password">Password</label>
-            <input type="password" id="reg-password" ng-model='user.password' class="form-control">
+            <input type="password" id="reg-password" ng-model='user.password' class="form-control" required>
             <label for="confirmPassword">Confirm Password</label>
-            <input type="password" id="confirmPassword" ng-model='user.confirmPassword' class="form-control">
+            <input type="password" id="confirmPassword" ng-model='user.confirmPassword' class="form-control" required>
             </br>
             <button ng-click='Register(user)' class="btn btn-default">Register</button>
         </form>
