--- a/Issue Tracking System/app/directives/navigationBar.html
+++ b/Issue Tracking System/app/directives/navigationBar.html
@@ -1,8 +1,7 @@
-
-    <ul class="nav navbar-nav navbar-right" >
-        <li><a href="#/profile">Profile <span class="sr-only">(current)</span></a></li>
-        <li><a href="#/projects">Projects</a></li>
-        <li><a href="#/logout" ng-controller="LogoutCtrl" ng-click="Logout()">Logout</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-    </ul>
+<ul class="nav navbar-nav navbar-right">
+    <li><a href="#/profile">Profile <span class="sr-only">(current)</span></a></li>
+    <li><a href="#/projects">Projects</a></li>
+    <li><a href="#/logout" >Logout</a></li>
+</ul>
+<ul class="nav navbar-nav navbar-right">
+</ul>
