--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -56,6 +56,7 @@
 <script src="app/directives/navigationBar.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
 <script src="app/Project/Projects.js"></script>
+<script src="app/Home/Profile/Profile.js"></script>
 </body>
 </html>
 
