--- a/Issue Tracking System/app/Home/Profile/Profile.html
+++ b/Issue Tracking System/app/Home/Profile/Profile.html
@@ -4,4 +4,5 @@
 <div>isAdmin:
     {{isAdmin}}
 </div>
-<button>Change Password</button>
+<button class="btn btn-default" ng-click="ChangePass()">Change Password</button>
+
