--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Issue Tracking System</a>
+            <a class="navbar-brand" href="#/">Issue Tracking System</a>
             <div ng-if="isLogged"nav-bar class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ></div>
         </div>
 
