Change Password is working

--- a/Issue Tracking System/app/Home/Profile/ChangePassword.html
+++ b/Issue Tracking System/app/Home/Profile/ChangePassword.html
@@ -1,12 +1,12 @@
-<form>
-    <label for="oldPassword">Current Password</label>
-    <input type="password" id="oldPassword"/>
+<form >
+    <label>Current Password</label>
+    <input ng-model="user.OldPassword" type="password" id="oldPassword" class="form-control"/>
     </br>
     <label for="newPassword">New Password</label>
-    <input type="password" id='newPassword'>
+    <input ng-model="user.NewPassword" type="password" id='newPassword' class="form-control">
     </br>
-    <label>RepeatedPassword</label>
-    <input type="password" id="RepeatedPassword"/>
+    <label for="ConfirmPassword">RepeatedPassword</label>
+    <input ng-model="user.ConfirmPassword" type="password" id="ConfirmPassword" class="form-control"/>
     </br>
-
+    <button class="btn btn-default" ng-click="Change(user)">Change Password</button>
 </form>
