--- a/Issue Tracking System/app/Home/home.html
+++ b/Issue Tracking System/app/Home/home.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div>
     <div class="col-md-3 col-md-offset-1">
         <form name="LoginForm">
             <label for="email">Email</label>
