--- a/Issue Tracking System/app/Profile/ChangePassword.html
+++ b/Issue Tracking System/app/Profile/ChangePassword.html
@@ -1,4 +1,4 @@
-<form >
+<form class="col-md-3">
     <label>Current Password</label>
     <input ng-model="user.OldPassword" type="password" id="oldPassword" class="form-control"/>
     </br>
