--- a/Issue Tracking System/app/Project/All-projects.html
+++ b/Issue Tracking System/app/Project/All-projects.html
@@ -4,5 +4,5 @@
     <button class="form-control" ng-click="Projects(Id)">button</button>
 </div>
 <div ng-repeat="project in Projects">
-    {{project.Name}}
+    {{project}}
 </div>
