--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -51,12 +51,12 @@
 <script src="app/bower_components/toastr/toastr.js"></script>
 <script src="app/app.js"></script>
 <script src="app/Home/Logout/Logout.js"></script>
-<script src="app/Home/home-controller.js/"></script>
+<script src="app/Home/Home.js/"></script>
 <script src="app/Authentication/authentication.js"></script>
 <script src="app/directives/navigationBar.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
 <script src="app/Project/Projects.js"></script>
-<script src="app/Home/Profile/Profile.js"></script>
+<script src="app/Profile/Profile.js"></script>
 </body>
 </html>
 
