--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -54,6 +54,7 @@
 <script src="app/Home/Home.js/"></script>
 <script src="app/Authentication/authentication.js"></script>
 <script src="app/directives/navigationBar.js"></script>
+<script src="app/directives/addProject.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
 <script src="app/Project/Projects.js"></script>
 <script src="app/Profile/Profile.js"></script>
