Dashboard is working (pagination added

--- a/Issue Tracking System/app/Project/allProjects.html
+++ b/Issue Tracking System/app/Project/allProjects.html
@@ -1,4 +1,6 @@
+
 <div ng-if="addProject!=''">
+
     <div add-project></div>
 </div>
 <div ng-repeat="project in allProjects">
@@ -6,3 +8,10 @@
         <b>{{project}}</b>
     </p>
 </div>
+<ul class="pagination">
+    <li><a href="#/projects/1">1</a></li>
+    <li><a href="#/projects/2">2</a></li>
+    <li><a href="#/projects/3">3</a></li>
+    <li><a href="#/projects/2">4</a></li>
+    <li><a href="#/projects/5">5</a></li>
+</ul>
