--- a/Issue Tracking System/app/Dashboard/dashboard.html
+++ b/Issue Tracking System/app/Dashboard/dashboard.html
@@ -1,46 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Dashboard</title>
-</head>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<div class="container">
+    <div class="col-md-offset-2">
+        <h1>Dashboard</h1>
+        <table style="width: 100%">
+            <thead>
+            <tr>
+                <td><b>Issue</b></td>
+                <td><b>Project</b></td>
+                <td><b>Due Date</b></td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="issue in issues |orderBy : '-DueDate'">
+                <td>{{issue.Title}}</td>
+                <td>{{issue.Project['Name']}}</td>
+                <td>{{issue.DueDate}}</td>
+            </tr>
+            </tbody>
+        </table>
+    <div class="col-md-offset-2">
+        <uib-pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></uib-pagination>
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<body>
-<div class="jumbotron" style="height: 100%">
-<h1>Dashboard</h1>
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<td>Issue</td>
-			<td>Project</td>
-			<td>Due Date</td>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Bad Request has no message describing the problem</td>
-			<td>SIT</td>
-			<td>28/03/2016</td>
-		</tr>
-		<tr>
-			<td>Adding new product doesn't list correct price</td>
-			<td>Cart Management</td>
-			<td>30/03/2016</td>
-		</tr>
-		<tr>
-			<td>English version broken</td>
-			<td>Nasdaq informational site</td>
-			<td>02/04/2016</td>
-		</tr>
-	</tbody>
-</table>
-	<button ng-click="BigFoot()"></button>
+    </div>
 </div>
-</body>
-</html>
+</div>
