--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -49,6 +49,8 @@
 <script src="app/bower_components/angular/angular.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
 <script src="app/bower_components/toastr/toastr.js"></script>
+<script src="app/bower_components/pagination/ui-bootstrap-custom-1.3.2.js"></script>
+<script src="app/bower_components/pagination/ui-bootstrap-custom-tpls-1.3.2.js"></script>
 <script src="app/app.js"></script>
 <script src="app/Home/Logout/Logout.js"></script>
 <script src="app/Home/Home.js/"></script>
