--- a/Issue Tracking System/app/Dashboard/dashboard.html
+++ b/Issue Tracking System/app/Dashboard/dashboard.html
@@ -1,10 +1,11 @@
 <div class="container">
-    <div class="col-md-offset-2">
+    <div class="col-md-offset-1" >
         <h1>Dashboard</h1>
         <table style="width: 100%">
             <thead>
             <tr>
                 <td><b>Issue</b></td>
+                <td><b>Description</b></td>
                 <td><b>Project</b></td>
                 <td><b>Due Date</b></td>
             </tr>
@@ -12,6 +13,7 @@
             <tbody>
             <tr ng-repeat="issue in issues |orderBy : '-DueDate'">
                 <td>{{issue.Title}}</td>
+                <td>{{issue.Description}}</td>
                 <td>{{issue.Project['Name']}}</td>
                 <td>{{issue.DueDate}}</td>
             </tr>
