required fix profile to local storage

--- a/Issue Tracking System/app/Profile/ChangePassword.html
+++ b/Issue Tracking System/app/Profile/ChangePassword.html
@@ -1,12 +1,12 @@
-<form class="col-md-3">
+<form class="col-md-3" name="changePassword">
     <label>Current Password</label>
-    <input ng-model="user.OldPassword" type="password" id="oldPassword" class="form-control"/>
+    <input ng-model="user.OldPassword" type="password" id="oldPassword" class="form-control" required/>
     </br>
     <label for="newPassword">New Password</label>
-    <input ng-model="user.NewPassword" type="password" id='newPassword' class="form-control">
+    <input ng-model="user.NewPassword" type="password" id='newPassword' class="form-control" required>
     </br>
     <label for="ConfirmPassword">RepeatedPassword</label>
-    <input ng-model="user.ConfirmPassword" type="password" id="ConfirmPassword" class="form-control"/>
+    <input ng-model="user.ConfirmPassword" type="password" id="ConfirmPassword" class="form-control" required/>
     </br>
-    <button class="btn btn-default" ng-click="Change(user)">Change Password</button>
+    <button class="btn btn-default" ng-disabled="changePassword.$invalid" ng-click="Change(user)">Change Password</button>
 </form>
