--- a/Issue Tracking System/app/Home/home.html
+++ b/Issue Tracking System/app/Home/home.html
@@ -6,7 +6,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" ng-model='user.password' class="form-control" required>
             </br>
-            <button ng-click='Login(user)' class="btn btn-default">Login</button>
+            <button ng-click='Login(user)' ng-disabled="LoginForm.$invalid" class="btn btn-default">Login</button>
         </form>
     </div>
     <div class="col-md-3 col-md-offset-2">
@@ -18,7 +18,7 @@
             <label for="confirmPassword">Confirm Password</label>
             <input type="password" id="confirmPassword" ng-model='user.confirmPassword' class="form-control" required>
             </br>
-            <button ng-click='Register(user)' class="btn btn-default">Register</button>
+            <button ng-click='Register(user)' ng-disabled="RegisterForm.$invalid" class="btn btn-default">Register</button>
         </form>
     </div>
 </div>
