--- a/Issue Tracking System/app/Project/addNewProject.html
+++ b/Issue Tracking System/app/Project/addNewProject.html
@@ -2,33 +2,33 @@
 <h2 style="margin-top: 0"> Add new Project</h2>
 <form>
 <div class="form-group">
-    <label for="exampleInputEmail1">Name</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Project Name">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" placeholder="Project Name" ng-model="project.Name">
   </div>
   <div class="form-group">
-    <label for="exampleInputEmail1">Leader</label>
+    <label>Leader</label>
     <select class="form-control">
     	<option>Pesho</option>
     	<option>Gosho</option>
     </select>
   </div>
   <div class="form-group">
-    <label for="exampleInputEmail1">Project Key</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Project Key">
+    <label for="projectKey">Project Key</label>
+    <input type="text" class="form-control" id="projectKey" placeholder="Project Key">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Priorities (comma separated)</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Available Priorities For The Issues" value="Low, Medium, Urgent">
+    <label for="priorities">Priorities (comma separated)</label>
+    <input type="text" class="form-control" id="priorities" placeholder="Available Priorities For The Issues" value="Low, Medium, Urgent">
   </div>
    <div class="form-group">
-    <label for="exampleInputPassword1">Labels (comma separated)</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Labels" value="Soft">
+    <label for="labels">Labels (comma separated)</label>
+    <input type="text" class="form-control"  id="labels"  placeholder="Labels" value="Soft">
     <br>
   </div>
    <div class="form-group">
-    <label for="exampleInputPassword1">Description</label>
-    <textarea class="form-control" placeholder="Description"></textarea>
+    <label for="description">Description</label>
+    <textarea class="form-control" id="description" placeholder="Description" ></textarea>
   </div>
-  <button type="submit" class="btn btn-success">Add Project</button>
+  <button type="submit" class="btn btn-success" ng-click="addProject(project)">Add Project</button>
 </form>
 </div>
