--- a/Issue Tracking System/app/Project/allProjects.html
+++ b/Issue Tracking System/app/Project/allProjects.html
@@ -21,7 +21,7 @@
     </table>
 </div>
 </br>
-<div ng-if="isAdmin==true" class="col-md-offset-3">
+<div ng-if="isAdmin" class="col-md-offset-3">
     <button class="btn btn-success" ng-click="addNewProject()">Add project</button>
 </div>
 </br>
