--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -55,6 +55,7 @@
 <script src="app/Home/Logout/Logout.js"></script>
 <script src="app/Home/Home.js/"></script>
 <script src="app/Users/authentication.js"></script>
+<script src="app/Issue/getIssues.js"></script>
 <script src="app/directives/navigationBar.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
 <script src="app/Project/Projects.js"></script>
