--- a/Issue Tracking System/app/Project/addNewProject.html
+++ b/Issue Tracking System/app/Project/addNewProject.html
@@ -1,34 +1,35 @@
 <div class="col-md-offset-4" style="width: 20em">
-<h2 style="margin-top: 0"> Add new Project</h2>
-<form>
-<div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" placeholder="Project Name" ng-model="project.Name">
-  </div>
-  <div class="form-group">
-    <label>Leader</label>
-    <select class="form-control">
-    	<option>Pesho</option>
-    	<option>Gosho</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="projectKey">Project Key</label>
-    <input type="text" class="form-control" id="projectKey" placeholder="Project Key">
-  </div>
-  <div class="form-group">
-    <label for="priorities">Priorities (comma separated)</label>
-    <input type="text" class="form-control" id="priorities" placeholder="Available Priorities For The Issues" value="Low, Medium, Urgent">
-  </div>
-   <div class="form-group">
-    <label for="labels">Labels (comma separated)</label>
-    <input type="text" class="form-control"  id="labels"  placeholder="Labels" value="Soft">
-    <br>
-  </div>
-   <div class="form-group">
-    <label for="description">Description</label>
-    <textarea class="form-control" id="description" placeholder="Description" ></textarea>
-  </div>
-  <button type="submit" class="btn btn-success" ng-click="addProject(project)">Add Project</button>
-</form>
+    <h2 style="margin-top: 0"> Add new Project</h2>
+    <form>
+        <div class="form-group">
+            <label>Leader</label>
+            <select class="form-control" ng-model="project.Leader" >
+                <option ng-repeat="user in users">{{user.Username}}</option>
+
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="projectKey">Project Key</label>
+            <input type="text" class="form-control" id="projectKey" placeholder="Project Key" ng-model="project.ProjectKey">
+        </div>
+        <div class="form-group">
+            <label for="priorities">Priorities (comma separated)</label>
+            <input type="text" class="form-control" id="priorities" placeholder="Available Priorities For The Issues"
+                   value="Low, Medium, Urgent" ng-model="project.Priorities">
+        </div>
+        <div class="form-group">
+            <label for="labels">Labels (comma separated)</label>
+            <input type="text" class="form-control" id="labels" placeholder="Labels" value="Soft" ng-model="project.Labels">
+        </div>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Project Name" ng-model="project.Name">
+            <br>
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" placeholder="Description"  ng-model="project.Description"></textarea>
+        </div>
+        <button type="submit" class="btn btn-success" ng-click="addProject(project)">Add Project</button>
+    </form>
 </div>
