--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -59,6 +59,7 @@
 <script src="app/Dashboard/Dashboard.js"></script>
 <script src="app/Project/Projects.js"></script>
 <script src="app/Profile/Profile.js"></script>
+<script src="app/Project/ProjectService.js"></script>
 </body>
 </html>
 
