--- a/Issue Tracking System/app/Project/addNewProject.html
+++ b/Issue Tracking System/app/Project/addNewProject.html
@@ -30,6 +30,6 @@
             <label for="description">Description</label>
             <textarea class="form-control" id="description" placeholder="Description"  ng-model="project.Description"></textarea>
         </div>
-        <button type="submit" class="btn btn-success" ng-click="addProject(project)">Add Project</button>
+        <button type="submit" class="btn btn-success" ng-click="addOrEditProject(project,true)">Add Project</button>
     </form>
 </div>
