--- a/Issue Tracking System/index.html
+++ b/Issue Tracking System/index.html
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">&nbsp;&nbsp;Issue Tracking System</a>
+            <a class="navbar-brand" href="#/"style="margin-left: 1em">Issue Tracking System</a>
             <div ng-if="isLogged"nav-bar class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ></div>
         </div>
 
@@ -58,12 +58,14 @@
 <script src="app/Home/Logout/Logout.js"></script>
 <script src="app/Home/Home.js/"></script>
 <script src="app/Users/authentication.js"></script>
-<script src="app/directives/navigationBar.js"></script>
+<script src="app/NavigationBar/navigationBar.js"></script>
 <script src="app/Dashboard/Dashboard.js"></script>
 <script src="app/Project/Projects.js"></script>
+<script src="app/Issue/Issue.js"></script>
 <script src="app/Profile/Profile.js"></script>
 <script src="app/Project/ProjectService.js"></script>
 <script src="app/Users/getUsers.js"></script>
+
 </body>
 </html>
 
