--- a/Issue Tracking System/app/NavigationBar/navigationBar.html
+++ b/Issue Tracking System/app/NavigationBar/navigationBar.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav navbar-right">
-    <li><a href="#/profile">Profile <span class="sr-only">(current)</span></a></li>
+    <li><a href="#/profile">Profile</a></li>
     <li><a href="#/projects">Projects</a></li>
     <li><a href="#/logout" >Logout</a></li>
 </ul>
