--- a/Issue Tracking System/app/Project/allProjects.html
+++ b/Issue Tracking System/app/Project/allProjects.html
@@ -1,8 +1,8 @@
-
+<div class="container">
 <div class="col-md-offset-4">
     <uib-pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></uib-pagination>
 </div>
-<div class="col-md-offset-1">
+<div class="col-md-offset-2">
     <table style="width: 100%">
         <thead>
         <tr>
