add issue added

--- a/Issue Tracking System/app/Project/project.html
+++ b/Issue Tracking System/app/Project/project.html
@@ -1,6 +1,6 @@
 <div ng-if="isAdmin" class="col-md-offset-2">
     <button class="btn btn-default btn-success" ng-click="editProject()">Edit Project</button>
-    <button class="btn btn-default btn-info">Add issue</button>
+    <button class="btn btn-default btn-info" ng-click="addIssue()">Add issue</button>
 </div>
 <br>
 <div class="col-md-offset-2">
